feat: removed involved and opinion
